Fixed Logo and add button alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,7 +3,7 @@
 }
 .title {
     float:left;
-    margin-bottom: 40px;
+    margin-top:20px;
 }
 
 .book_link {
@@ -12,7 +12,7 @@
 
 .add_button {
     float:right;
-    margin-top:30px;
+    margin-top:20px;
 }
 
 /* For the books/_books.html.erb partial. */
